--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NEXT_PUBLIC_BASE_URL="http://localhost:5000/api/v1"
 
 
-# THIS ENVIRONMENT VARIABLE USED FOR NEXT AUTH SETUP 
+# THIS ENVIRONMENT VARIABLE USED FOR NEXT AUTH SETUP
+NEXTAUTH_URL="http://localhost:3000" # replace with your hosted url
 NEXT_PUBLIC_NEXT_AUTH_SECRET="YOUR NEXT AUTH SECRET KEY"
 NEXT_PUBLIC_GOOGLE_CLIENT_ID="YOUR GOOGLE CLIENT ID"
 NEXT_PUBLIC_GOOGLE_CLIENT_SECRET="YOUR GOOGLE CLIENT SECRET"
