--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BASE_URL="http://localhost:5000/api/v1"
+NEXT_PUBLIC_BASE_URL=https://jalmas-test-generator.vercel.app/api/v1
 
 
 # THIS ENVIRONMENT VARIABLE USED FOR NEXT AUTH SETUP
