feat: Update currency display from PKR to Rs in MetricsCards, SubscriptionPage, and QuestionManagementPage
fix: Add selector for current token in authSlice

feat: Implement MyFormInput1 component for enhanced form handling

feat: Create MyFormWrapper component to manage form state and submission

feat: Add useSocketIO hook for WebSocket communication with improved error handling and message management

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.9.4",
     "js-cookie": "^3.0.5",
@@ -42,6 +43,7 @@
     "react-redux": "^9.2.0",
     "recharts": "^3.2.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
